<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">কৃষি বার্তা</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title">কৃষি বার্তায় স্বাগতম</string>
    
    <string name="title_activity_about_crop">শস্য তালিকা</string>
    <string name="title_activity_about_us">আমাদের সম্পর্কে</string>
    <string name="title_activity_add_info_paddy">ধান সম্পর্কিত তথ্য</string>
    <string name="title_activity_add_info_jute">পাট সম্পর্কিত তথ্য</string>
    <string name="title_activity_add_info_wheat">গম সম্পর্কিত তথ্য</string>
    <string name="title_activity_cultivation_time_paddy">ধান চাষের সময়</string>
    <string name="title_activity_cultivation_time_jute">পাট চাষের সময়</string>
    <string name="title_activity_cultivation_time_wheat">গম চাষের সময়</string>
    <string name="title_activity_description_paddy">ধান</string>
    <string name="title_activity_description_jute">পাট</string>
    <string name="title_activity_description_wheat">গম</string>
    <string name="title_activity_disease_paddy">ধানের রোগ-বালাই</string>
    <string name="title_activity_disease_jute">পাটের রোগ-বালাই</string>
    <string name="title_activity_disease_wheat">গমের রোগ-বালাই</string>
    <string name="title_activity_paddy">ধান</string>
    <string name="title_activity_jute">পাট</string>
    <string name="title_activity_wheat">গম</string>
    <string name="title_activity_help">সহায়তা কেন্দ্র</string>
    
    <string name="dummy_text">dummy</string>
    <string name="submit">Submit</string>
    <string name="form">Form</string>

   <string-array name="Home">
        <item>শস্য সম্পর্কিত তথ্য</item>
        <item>সহায়তা</item>
        <item>আমাদের সম্পর্কে</item>
    </string-array>
    
    <string-array name="About_crop">
        <item>ধান</item>
        <item>গম</item>
        <item>পাট</item>
    </string-array>
    
    <string-array name="CropInfo_Paddy">
        <item>বর্ণনা</item>
        <item>চাষের সময়</item>
        <item>রোগ-বালাই</item>        
         </string-array>
         
        <string-array name="CropInfo_Jute">
        <item>বর্ণনা</item>
        <item>চাষের সময়</item>
        <item>রোগ-বালাই</item>
        
         </string-array>
         
        <string-array name="CropInfo_Wheat">
       <item>বর্ণনা</item>
        <item>চাষের সময়</item>
        <item>রোগ-বালাই</item>
        
    </string-array>
    
    <string-array name="help">
        <item>সহায়তা কেন্দ্র</item>
        <item>চাষ সম্পর্কিত</item>
        <item>রোগ-বালাই ও দমন সম্পর্কিত </item>    </string-array>

    <string name="title_activity_cultivation_help">চাষ সম্পর্কিত সাহায্য</string>
    <string name="title_activity_disease_help">রোগ-বালাই ও দমন সম্পর্কিত</string>
    
     <string name="send_sms_cultivation_help">চাষ সম্পর্কিত</string>
     
      <string name="send_sms_disease_help">রোগ-বালাই ও দমন সম্পর্কিত</string>
      
           
      <string name="evan">মোঃ রায়হানুল ইকবাল ইভান\nই-মেইলঃ rayhan.evan@gmail.com</string>
      <string name="kayes">মোঃ ফরিদুর কায়েস শাওন\nই-মেইলঃ shawon.kayes@gmail.com</string>
      
      <string name="evan_img"></string>
      <string name="kayes_img"></string>
      
      <string name="call"></string>
      <string name="sms"></string>
      
     <string name="home">মূল পাতা</string>
     
      <string name="about_crop">শস্য তালিকা</string>
      
      <string name="add_info_paddy">তথ্য-ধান</string>
      <string name="add_info_jute">তথ্য-পাট</string>
      <string name="add_info_wheat">তথ্য-গম</string>
      
      
       <string name="description_paddy">ধান (বৈজ্ঞানিক নাম Oryza sativa, Oryza glaberrima ) Graminae/Poaceae গোত্রের দানাশস্যের উদ্ভিদ ।\n
          								ধান উষ্ণ জলবায়ুতে, বিশেষত পূর্ব-এশিয়ায় ব্যাপক চাষ হয়।\n
          								ধান সাধারণত একবর্ষজীবি উদ্ভিদ,কোন কোন অঞ্চলে বিশেষ করে নাতিশীতোষ্ণ অঞ্চলে ধান দ্বি-বর্ষজীবি উদ্ভিদ হিসেবে চাষ করা হয়। </string>
      <string name="cultivation_time_paddy">চাষের সময়ের উপর নির্ভর করে বাংলাদেশের ধানকে তিনটি ভাগে ভাগ করা হয়ে থাকে।\n
          									এই প্রধান তিনটি ভাগ হল আউশ,আমন ও বোরো।\n
          									আউশ ধান:\n
          									দ্রুত (আশু) ফসল উৎপন্ন হওয়ার বিচারে এই ধানের নাম করা হয়েছে আউশ।এই ধান সাধারণত জন্মে বর্ষাকালের আষাঢ় মাসে। এই কারণে এর অপর নাম আষাঢ়ী ধান। তবে এই ধান বৎসরের যে কোন সময়েই চাষ করা যায়।\n
          									আমন ধানঃ \n
          									সংস্কৃত হৈমন বা হৈমন্তিক শব্দের অপভ্রংশ। ধান বিশেষ। এর অপর নাম আগুনী ও হৈমন্তিক। আমন মৌসুমে সবচেয়ে বেশি জমিতে ধানের আবাদ হয়। আমন ধান তিন প্রকার। যথা—\n
											১. রোপা আমন :\nচারা প্রস্তুত করে, সেই চারা রোপণ করে এই ধান উৎপন্ন হয় বলে এর এরূপ নাম। রোপা আমন জৈষ্ঠ্য-আষাঢ় মাসে বীজ তলায় বীজ বোনা হয়, শ্রাবণ-ভাদ্র মাসে মূল জমিতে রোপা কার হয় এবং অগ্রহায়ণ-পৌষ মাসে ধান কাটা হয়।\n
											২. বোনা আমন :\nএই আমন ছিটিয়ে বোনা হয়। বোনা আমন চৈত্র-বৈশাখ মাসে মাঠে বীজ বপন করা হয় এবং অগ্রহায়ণ মাসে পাকা ধান কাটা হয়। একে আছড়া আমনও বলে।\n
											৩. বাওয়া আমন :\nবিল অঞ্চলে এই আমন উৎপন্ন করা হয়। একে এই কারণে গভীর পানির বিলে আমনও বলা হয়ে থাকে।\n
											বোরো ধানঃ \n
											বোরো ধান প্রধানত সেচ নির্ভর। কার্তিক মাস থেকে বীজ তলায় বীজ বপন শুরু হয়। ধান কাটা চলে বৈশাখ-জৈষ্ঠ্য পর্যন্ত। উচ্চ ফলনশীল বোরো ধান প্রবর্তনের পর থেকে ধান আবাদ তথা সমুদয় কৃষি ব্যবস্থার মস্তবড় একটা পরিবর্তন এসেছে।
											</string>
											
      
       <string name="disease_paddy">ধানের রোগঃ\n
          							১। টুংরো\n
          							২। পাতা পোড়া\n
          							৩। উফড়া\n
          							৪। ব্লাস্ট\n
          							৫। খোল পোড়া\n
          							৬। গোড়া পঁচা\n
          							৭। বাদামী রোগ</string>
						
      
      <string name="description_jute">পাট একটি বর্ষাকালীন ফসল। বাংলাদেশে পাটকে সোনালী আঁশ বলা হয়ে থাকে এবং পাটই বাংলার (বাংলাদেশ ও পশ্চিম বঙ্গের) শত বর্ষের ঐতিহ্য। \n
          							   দুই ধরণের পাট বাংলাদেশে দেখতে পাওয়া যায়: Corchorus capsularis (সাদা পাট) ও Corchorus olitorius (তোষা পাট)। এটি Tiliaceae পরিবারের অন্তর্গত একটি উদ্ভিদ।</string>					
      
      <string name="cultivation_time_jute">চাষের সময়-পাট</string>
      
      <string name="disease_jute">পাটের রোগঃ\n
          							১। ঢলে পড়া\n
          							২। কান্ড পচা\n
          							৩। শুকনা ক্ষত\n
          							৪। কালো পট্টি\n
          							৫।  পাতায় সাদা গুড়া পড়া\n
          							৬। আগা শুকানো</string>
      
      <string name="description_wheat">গম  বিশ্বব্যাপী উৎপাদিত একটি ঘাস জাতীয় উদ্ভিদ যার আদি উৎপত্তি মধ্যপ্রাচ্যের লেভান্ট অঞ্চলে,\nকিন্তু এখন গম সারাবিশ্বে চাষ করা হয়। ২০০৭ সনে গমের বিশ্ব উৎপাদন ছিল ৬০৭ মিলিয়ন টন,
          								 যা ছিল বিশ্বের ৩য় সর্বাধিক উৎপাদিত শস্য।\n
          								 গমের বিভিন্ন জাত হলোঃ কাঞ্চন, আকবর, অগ্রণী, প্রতিভা,গৌরব,সৌরভ, সোনালিকা প্রভৃতি।</string>
      
      <string name="cultivation_time_wheat">কার্তিক মাসের শেষ থেকে অগ্রহায়ণের তৃতীয় সপ্তাহ বা নভেম্বর মাসের ১৫ তারিখ থেকে ৩০ তারিখ পর্যন্ত।</string>
    
      
      
      <string name="disease_wheat">গমের রোগঃ\n
          							১। লিফ ব্লাস্ট\n
          							২। লিফ ব্লাইট\n
          							৩। বীজে কালো দাগ\n
          							৪। বীজ ও গোড়া পঁচা\n
          							৫।  আলগা ঝুল\n
          							৬। শীষ ঝলসানো\n</string>
          							
      <string name="paddy">ধান</string>
      <string name="jute">পাট</string>
      <string name="wheat">গম</string>
      
      <string name="name">ব্যবহারকারীর নাম</string>
      <string name="area">এলাকার নাম</string>
      <string name="date">বর্তমান তারিখ</string>

</resources>
