<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:orientation="vertical"
     android:weightSum="13"
     android:background="#B4CF5F"
    tools:context=".Add_info_wheat">
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#00A2E8"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="22dp"
            android:text="@string/title_activity_add_info_paddy"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

     <EditText
         android:id="@+id/editText1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="65dp"
         android:ems="10"
         android:hint="@string/name" >

         <requestFocus />
     </EditText>

     <EditText
         android:id="@+id/editText2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/area" />

     <EditText
         android:id="@+id/editText3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/date"
         android:inputType="date" />

     <RelativeLayout
         android:id="@+id/relativeLayout2"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="50dp"
         android:background="#B4CF5F" >

    <Button
        android:id="@+id/submit3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/submit" />
    
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="73dp"
        android:background="#658A32" >

        <Button
            android:id="@+id/home5"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="#54A621"
            android:text="@string/home"
            android:textColor="#FFFF" />
    </RelativeLayout>

</LinearLayout>
