<?xml version="1.0" encoding="utf-8"?>
  <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent" >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:background="#B4CF5F"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="vertical" >
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#00A2E8"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="22dp"
            android:text="@string/title_activity_about_us"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>
    

        
      
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/evan_img"
        android:src="@drawable/evan" />

             <ImageView
                 android:id="@+id/imageView2"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:layout_alignParentLeft="true"
                 android:layout_below="@+id/imageView1"
                 android:layout_marginTop="72dp"
                 android:contentDescription="@string/kayes_img"
                 android:src="@drawable/kayes" />

             <TextView
                 android:id="@+id/evan"
                 android:layout_width="170dp"
                 android:layout_height="80dp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignTop="@+id/imageView1"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="14dp"
                 android:text="@string/evan"
                 android:textSize="16sp" />
             
             <ImageButton
                 android:id="@+id/call_evan"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_alignParentLeft="true"
                 android:layout_below="@+id/evan"
                 android:layout_marginLeft="25dp"
                 android:contentDescription="@string/call"
                 android:src="@drawable/call" />
             
                 

             <TextView
                 android:id="@+id/kayes"
                 android:layout_width="170dp"
                 android:layout_height="80dp"
                 android:layout_alignParentRight="true"
                 android:layout_alignTop="@+id/imageView2"
                 android:layout_marginRight="5dp"
                 android:text="@string/kayes"
                 android:textSize="16sp" />
             
             <ImageButton
                 android:id="@+id/call_kayes"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_below="@+id/kayes"
                 android:layout_marginTop="10dp"
                 android:layout_toRightOf="@+id/evan"
                 android:contentDescription="@string/call"
                 android:src="@drawable/call" />

             <ImageButton
                 android:id="@+id/send_sms_kayes"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_alignParentRight="true"
                 android:layout_alignTop="@+id/call_kayes"
                 android:layout_marginRight="23dp"
                 android:contentDescription="@string/sms"
                 android:src="@drawable/sms" />

             <ImageButton
                 android:id="@+id/send_sms_evan"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_alignTop="@+id/call_evan"
                 android:layout_toLeftOf="@+id/kayes"
                 android:contentDescription="@string/sms"
                 android:src="@drawable/sms" />

             <RelativeLayout
                 android:id="@+id/relativeLayout1"
                 android:layout_width="2000dp"
                 android:layout_height="50dp"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentLeft="true"
                 android:layout_marginTop="53dp"
                 android:background="#658A32" >

        <Button
            android:id="@+id/home2"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="#54A621"
            android:text="@string/home"
            android:textColor="#FFFF" />
        
    </RelativeLayout>

</RelativeLayout>

 </ScrollView>   