<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:orientation="vertical"
     android:weightSum="13"
     tools:context=".Paddy"
    android:background="#B4CF5F" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#00A2E8"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="20dp"
            android:text="@string/title_activity_description_jute"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disease_jute" />
    
   <RelativeLayout
       android:id="@+id/relativeLayout1"
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:layout_marginTop="225dp"
       android:background="#658A32" >

        <Button
            android:id="@+id/home12"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="#54A621"
            android:text="@string/home"
            android:textColor="#FFFF" />
    </RelativeLayout>

</LinearLayout>
